# routes/index.routes.js
@@ -4,13 +4,14 @@ const courses = require('./courses.routes.js');
 const notes = require('./notes.routes.js');
 const users = require('./users.routes.js');
 
-/*
 router.get('/', (req, res) => {
+    const Documentation = 'https://scool-managment-system.onrender.com/api-doc';
     res.json({
-        message: 'Welcome to the API'
+        Documentation,
+        message: 'Welcome to the API: School Management System API'
     });
 });
-*/
+
 
 router.use('/students', students);
 router.use('/courses', courses);
